--- a/Calc/Calc.Droid/Calc.Droid.csproj
+++ b/Calc/Calc.Droid/Calc.Droid.csproj
@@ -49,6 +49,7 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ObjectModel" />
     <Reference Include="System.Runtime" />
     <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Xml.Linq" />
